--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <option value="15">15</option>
                 </select>
             </li>
-            <li>banana
+<!--             <li>banana
                 <select name="Mango" class="select">
                     <option value="2">2</option>
                     <option value="5">5</option>
@@ -112,7 +112,7 @@
                     <option value="16">16</option>
                     <option value="15">15</option>
                 </select>
-            </li>
+            </li> -->
             <li>Table
                 <select name="Mango" id="select">
                     <option value="2">2</option>
